@@ -523,6 +523,8 @@ static void fm_app_config_init(FmAppConfig *cfg)
 #endif
     cfg->change_tab_on_drop = TRUE;
     cfg->close_on_unmount = TRUE;
+    cfg->maximized = FALSE;
+    cfg->pathbar_mode_buttons = FALSE;
 }
 
 
@@ -778,6 +780,7 @@ void fm_app_config_load_from_key_file(FmAppConfig* cfg, GKeyFile* kf)
         }
         g_strfreev(tmpv);
     }
+    fm_key_file_get_bool(kf, "ui", "pathbar_mode_buttons", &cfg->pathbar_mode_buttons);
 }
 
 void fm_app_config_load_from_profile(FmAppConfig* cfg, const char* name)
@@ -1154,6 +1157,7 @@ void fm_app_config_save_profile(FmAppConfig* cfg, const char* name)
             g_string_append(buf, "home;");
         g_string_append_c(buf, '\n');
         g_string_append_printf(buf, "show_statusbar=%d\n", cfg->show_statusbar);
+        g_string_append_printf(buf, "pathbar_mode_buttons=%d\n", cfg->pathbar_mode_buttons);
 
         path = g_build_filename(dir_path, "pcmanfm.conf", NULL);
         g_file_set_contents(path, buf->str, buf->len, NULL);
