@@ -123,11 +123,12 @@ struct _FmAppConfig
     gboolean media_in_new_tab;
     gboolean desktop_folder_new_win;
     gboolean change_tab_on_drop;
+    gboolean close_on_unmount;
 #if FM_CHECK_VERSION(1, 2, 0)
     gboolean focus_previous;
 #endif
     gboolean maximized;
-    gboolean close_on_unmount;
+    gboolean pathbar_mode_buttons;
 
     FmSidePaneMode side_pane_mode;
 
