@@ -232,6 +232,11 @@ Changes on 1.2.0 since 1.1.0:
     wallpaper and want their screen composed of two monitors to show the
     whole image - a part on first monitor and other part on second.
 
+* Added alternative to Location Bar - implemented FmPathBar support with
+    switching via menu 'View'->'Path Bar'->... radio buttons. The path
+    bar mode is applied to windows opened after change, the same way as
+    the side bar change is applied.
+
 
 Changes on 1.1.0 since 1.0.1:
 
